==> Dxy316625/2022-Research-and-innovation-association/TI/OLED/Hardware/OLED.c <==
#include "include.h"

void OLED_W_SCL(uint8_t BitValue)
{
	/*根据BitValue的值，将SCL置高电平或者低电平*/
	if(BitValue==1)
	{
		GPIOPinWrite(GPIO_OLED, GPIO_OLED_SCL, GPIO_OLED_SCL);
		//GPIOPinWrite(GPIO_PORTB_BASE, GPIO_PIN_0, BitValue);
	}
	else
		GPIOPinWrite(GPIO_OLED, GPIO_OLED_SCL, 0);
	//Delay_Us(50);
	/*如果单片机速度过快，可在此添加适量延时，以避免超出I2C通信的最大速度*/
	//...
}

void OLED_W_SDA(uint8_t BitValue)
{
	/*根据BitValue的值，将SDA置高电平或者低电平*/
//	GPIOPinWrite(GPIO_OLED, GPIO_OLED_SDA, BitValue);
	if(BitValue==1)
	{
		GPIOPinWrite(GPIO_OLED, GPIO_OLED_SDA, GPIO_OLED_SDA);
		//GPIOPinWrite(GPIO_PORTB_BASE, GPIO_PIN_1, BitValue);
	
	}
	else
		GPIOPinWrite(GPIO_OLED, GPIO_OLED_SDA, 0);
	
	//Delay_Us(50);
	/*如果单片机速度过快，可在此添加适量延时，以避免超出I2C通信的最大速度*/
	//...
}

void OLED_GPIO_Init(void)
{
	uint32_t i, j;
	
	/*在初始化前，加入适量延时，待OLED供电稳定*/
	for (i = 0; i < 1000; i ++)
	{
		for (j = 0; j < 1000; j ++);
	}
	
	
  SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIO_OLED);// Enable the GPIO port that is used for the on-board LED.
  GPIOPinTypeGPIOOutput(GPIO_OLED, GPIO_OLED_SCL);
  GPIOPinTypeGPIOOutput(GPIO_OLED, GPIO_OLED_SDA);
//  
//	SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOB);// Enable the GPIO port that is used for the on-board LED.
//  GPIOPinTypeGPIOOutput(GPIO_PORTB_BASE, GPIO_PIN_0);
//  GPIOPinTypeGPIOOutput(GPIO_PORTB_BASE, GPIO_PIN_1);
	
//	#define SYSCTL_PERIPH_GPIO_OLED    SYSCTL_PERIPH_GPIOB
//#define GPIO_OLED                  GPIO_PORTB_BASE
//#define GPIO_OLED_SCL              GPIO_PIN_0
//#define GPIO_OLED_SDA              GPIO_PIN_1
//	
	OLED_W_SCL(1);//设置高
  OLED_W_SDA(1);//设置高

}
